--- a/src/exercise/01.html
+++ b/src/exercise/01.html
@@ -17,3 +17,15 @@
 <!-- 🐨 Append the div to the root div using `append` -->
 <!--   💰 document.getElementById('root') -->
 <!--   📜 https://developer.mozilla.org/en-US/docs/Web/API/ParentNode/append -->
+<html>
+  <body>
+    <script type="module">
+      let root = document.createElement('div')
+      root.id = 'root'
+      let div = document.createElement('div')
+      div.textContent = 'Hello World'
+      document.body.append(root)
+      root.appendChild(div)
+    </script>
+  </body>
+</html>
