--- a/src/exercise/02.html
+++ b/src/exercise/02.html
@@ -2,25 +2,42 @@
 <!-- http://localhost:3000/isolated/exercise/02.html -->
 
 <body>
-  <div id="root"></div>
-
   <!-- 🐨 add React and ReactDOM on the page.
-       💰 Here are script tags that'll do the job:
+       💰 Here are script tags that'll do the job:   -->
   <script src="https://unpkg.com/react@17.0.0/umd/react.development.js"></script>
   <script src="https://unpkg.com/react-dom@17.0.0/umd/react-dom.development.js"></script>
-  -->
 
   <script type="module">
-    const rootElement = document.getElementById('root')
+    const rootElement = document.createElement('div')
+    rootElement.id = 'root'
+    document.body.append(rootElement)
 
+    const spanHello = React.createElement('span', {}, 'Hello')
+    const spanWorld = React.createElement('span', {}, 'World')
+
+    const elementProps = {
+      className: 'container',
+    }
+    console.log(spanHello)
+    const children = [spanHello, spanWorld]
+    console.log(children)
+    const elementType = 'div'
+    const reactElement = React.createElement(
+      elementType,
+      elementProps,
+      spanHello,
+      ' ',
+      spanWorld,
+    )
+    console.log(rootElement)
     // You're going to re-implement this code using React!
     // 💣 So go ahead and delete this implementation (or comment it out for now)
     // These three lines are similar to React.createElement
-    const element = document.createElement('div')
-    element.textContent = 'Hello World' // 💰 in React, you set this with the "children" prop
-    element.className = 'container' // 💰 in React, this is also called the "className" prop
+    // const element = document.createElement('div')
+    // element.textContent = 'Hello World' // 💰 in React, you set this with the "children" prop
+    // element.className = 'container' // 💰 in React, this is also called the "className" prop
     // This is similar to ReactDOM.render
-    rootElement.append(element)
+    ReactDOM.render(reactElement, rootElement)
 
     // 🐨 Please re-implement the regular document.createElement code above
     // with these React API calls
