--- a/src/exercise/04-extra-1.html
+++ b/src/exercise/04-extra-1.html
@@ -13,10 +13,15 @@
     }
     // 🐨 use that function in place of the divs below with:
     // 💰 {message({children: 'Hello World'})} {message({children: 'Goodbye World'})}
+    const helloWorld = React.createElement(message, {children: 'Hello World'})
+    const goodbyeWorld = React.createElement(message, {
+      children: 'Goodbye World',
+    })
+
     const element = (
       <div className="container">
-        {message({children: 'Hello World'})}
-        {message({children: 'Goodbye World'})}
+        {helloWorld}
+        {goodbyeWorld}
       </div>
     )
 
