--- a/src/exercise/04-extra-2.html
+++ b/src/exercise/04-extra-2.html
@@ -8,15 +8,20 @@
   <script src="https://unpkg.com/@babel/standalone@7.12.4/babel.js"></script>
   <script type="text/babel">
     // 🐨 Make a function called `message` which returns the JSX we want to share
-    function message(props) {
+    function Message(props) {
       return <div className="message">{props.children}</div>
     }
     // 🐨 use that function in place of the divs below with:
     // 💰 {message({children: 'Hello World'})} {message({children: 'Goodbye World'})}
+    const helloWorld = React.createElement(Message, {children: 'Hello World'})
+    const goodbyeWorld = React.createElement(Message, {
+      children: 'Goodbye World',
+    })
+
     const element = (
       <div className="container">
-        {message({children: 'Hello World'})}
-        {message({children: 'Goodbye World'})}
+        {helloWorld}
+        {goodbyeWorld}
       </div>
     )
 
